--- a/src/content/3-6-2015.md
+++ b/src/content/3-6-2015.md
@@ -9,8 +9,10 @@ Join us for a black elephant event of random gift exchange. Those participating
 should bring a random, useless gift that will be forced upon attendees. Particpation 
 is not recommended. 
 
-* AntiTree: Month in review
+* AntiTree: Months in review
 * AntiTree: NSA and VPNs
+* Jynik: YateBTS
 * AntiSeth: The Sony Hacks Timeline
+* CowboiJoe: Social Engineering a Car
 * All: Black Elephant Exchange
 
